# network-community-detection-benchmark

./: .gitignore  LICENSE  README.md  README.me  community_detection_results.csv  graph_stats.py  pyproject.toml  requirements.txt  run_analysis.py  run_statistics.py
cd_benchmark/: analysis.py  benchmark.py  generator.py  globals.py  imports.py  network.py  statistics.py  support.py
common/: analysis.py  analysis_custom_leiden.py  benchmark.py  common.py  community.py  generator.py  globals.py  imports.py  network.py  statistics.py  support.py  visualization.py
examples/: community_detection_results.csv  graph_stats.py
examples/network_analysis/directed/: analyse_eu_directed.py
examples/network_analysis/undirected/: analyse_citation.py  analyse_erdos.py  (+5 more)
intro/: stats.py
misc/intro/: graphs.py
misc/visualisations/: betweeness_centrality.py  degree_centrality.py  inout_centrality.py  katz_centrality.py  node2vec_cd.py  pagerank_centrality.py  random_walk.py  random_walk_cd.py  sbm.py  smallworld.py
research/: analyse_citation.py  analyse_erdos.py  analyse_eu.py  analyse_neuro.py  analyse_twitter.py  analyse_zachary.py  community_detection_results.csv  final_analysis.py  graph_stats.py  visualise.py
research/directed/: analyse_eu_directed.py  community_detection_results.csv
research/statistics_analysis/: run_statistics.py
research/stats/: stats_citation.py  stats_erdos.py  stats_eu.py  stats_neuro.py  stats_twitter.py  stats_zachary.py
run/: run_analysis.py  run_statistics.py
visualisations/: betweeness_centrality.py  pagerank_centrality.py
(+9 files in other folders)
